passing test for adding one period