@@ -8,7 +8,15 @@ public class ClockManager
 
 	public List<Day> createDays(List<Period> periods)
 	{
-		return Collections.emptyList();
+		if (periods.isEmpty())
+			return Collections.emptyList();
+		else
+		{
+			Period firstPeriod = periods.get(0);
+			List<Period> periodOfDay = List.of(firstPeriod);
+			Day day = new Day(periodOfDay);
+			return List.of(day);
+		}
 	}
 
 }
